$Id: History,v 1.170 2001-11-21 16:49:26 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

21st November 2001  John Allison  (vis-V03-02-20)
- Fixed G4std bug in G4HepRepFileSceneHandler.hh.
- Fixed "hides the virtual function" warnings from G4HepRepFileSceneHandler.
- Change to comments in G4XXXSceneHandler.hh.

19th November 2001  John Allison  (vis-V03-02-19 needs config-V03-02-09+)
- Cosmetic changes to HepRep.

16th November 2001  John Allison
- Added G4XXXDEBUG to XXX dummy system.

14th November 2001  John Allison
- Fixed bug in G4VisManager::EndOfEvent.
- Moved code from G4VisManagerRegisterMessengers.cc to G4VisManager.cc and
  removed G4VisManagerRegisterMessengers.cc.

14th November 2001  Guy Barrand
- OpenInventor : move HEPVis/SoWindow under vis/OpenInventor/G4SoWindow
  to prepare HEPVis/6.0. (HEPVis/SoWindow will disappear from HEPVis/6.0).

14th November 2001  John Allison
- Added README.built_in_commands.
