@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4OpenGLXmConvenienceRoutines.cc,v 1.6 2001-07-11 10:08:56 gunter Exp $
+// $Id: G4OpenGLXmConvenienceRoutines.cc,v 1.7 2001-11-29 12:14:02 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -191,7 +191,8 @@ void G4OpenGLXmViewer::Add_radio_box (char* label_string,
 				    G4OpenGLXmViewer* pView)
 {
 
-  XmString button_str;
+  XmString button_str = XmStringCreateLocalized(""); // ...to
+  // initialise to something to avoid pedantic warning.
   Arg** args;
   args = new Arg* [num_buttons];
   Widget button;
@@ -368,7 +369,8 @@ void G4OpenGLXmViewer::Add_slider_box (char* label_string,
 				     XtCallbackRec** slider_box_callbacks,
 				     Widget* parent_widget)
 {
-  XmString slider_name_str;
+  XmString slider_name_str = XmStringCreateLocalized(""); // ...to
+  // initialise to something to avoid pedantic warning.
   Arg** slider_args;
   slider_args = new Arg*[num_sliders];
   Widget slider;
