@@ -1,4 +1,4 @@
-$Id: History,v 1.170 2001-11-21 16:49:26 johna Exp $
+$Id: History,v 1.171 2001-11-29 12:14:00 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,12 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+29th November 2001  John Allison
+- Fixed some pedantic warnings and a bug thrown up by such in OpenGL.
+
+28th November 2001  Gabriele Cosmo (visman-V03-02-00 in management only).
+- Fixed pointer initialisation for porting on VC++ in G4VisCommandsSceneAdd.cc.
 
 21st November 2001  John Allison  (vis-V03-02-20)
 - Fixed G4std bug in G4HepRepFileSceneHandler.hh.
